# DesQt

./: .gitignore  README.md  __init__.py  app.spec  build.py  fullscreen_V2.py  fullscreen_v1.py  main.py  pyproject.toml
offline_content/: index.html
