[tool.poetry]
name = "desqt"
version = "0.1.0"
description = ""
authors = ["subhamsarangi <subhamsarangi2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt6 = "^6.8.1"
pyqt6-webengine = "^6.8.0"
pyinstaller = "^6.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
